--- a/Launchbase/Components/Layout/NavMenu.razor
+++ b/Launchbase/Components/Layout/NavMenu.razor
@@ -1,7 +1,7 @@
 ﻿<MudNavMenu Class="bg-sr"
             Style="display:flex; flex-direction:column; justify-content:space-between; padding-bottom:20px; height:100%">
     <div class="w-full lg:flex flex-col items-center gap-2 mt-6 text-base menu-font flex justify-center">
-        <MudImage Src="/images/logo_main.png" Class="cursor-pointer w-48 object-contain my-6" />
+        <MudImage Src="/images/logo_main1.png" Class="cursor-pointer w-48 object-contain my-6" />
 
         <div class="w-full flex items-center justify-center px-4">
             <NavLink ActiveClass="w-full bg-nr text-white"
